Wrap code to avoid overflows.

--- a/docs/style.css
+++ b/docs/style.css
@@ -73,7 +73,7 @@ pre > .run-example {
 
 code {
     background-color: #eee;
-    white-space: pre;
+    white-space: pre-wrap;
 }
 
 table {
